--- a/_upskills/web.development.bali.html
+++ b/_upskills/web.development.bali.html
@@ -27,6 +27,8 @@ featured-images:
   - path: /images/upskills/web-development-bali/learn-how-to-code_8.jpg
 level: Beginner
 categories: ['tech']
+button: true
+
 ---
 <!-- LightWidget WIDGET -->
 <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/9e6f16f612f7523d84c8cccb6db48ba7.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
