--- a/about.html
+++ b/about.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 title: About
-subtitle: Our story
+subtitle: Learn with locals
 banner: /images/homepage/bg-photography.jpg
 ---
 ---
 <section class="about-section" class="center">
   <div>
     <h2>
-      Learn with Locals
+      Who are we?
     </h2>
   </div>
 </section>
