--- a/blog.html
+++ b/blog.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 banner: /images/homepage/bg-photography.jpg
-title: Learn with locals while you travel
-subtitle: Upskill and connect with likeminded people
+title: Learn With Locals
+subtitle: Join our community
+button: true
 ---
 <section class="blog-section center">
   <h2>
