--- a/how-it-works.html
+++ b/how-it-works.html
@@ -1,21 +1,19 @@
 ---
 layout: default
-title: How it works?
-subtitle: Learn with Locals
+title: How it works
+subtitle: Learn with locals
 banner: /images/homepage/bg-photography.jpg
 ---
 
 <section class="center">
   <div>
-    <h2>Too cool for school?</h2>
-    <h1>Then you've come to the right place!</h1>
+    <h4>Teach, learn and connect with likeminded people when traveling</h4>
   </div>
 </section>
 <!--Our story section  -->
 <section class="our-story-section" class="center">
   <div>
     <p>We help you find likeminded people when traveling so you can - not only learn about yourself and a destination - but also learn a new skill, meet people and have fun.</p>
-    <p>Learn with Locals started from the idea that traveling isn't just about going places, it is essentially about people and broadening your horizon. We call it learning, not only learning new skills, but also learning about yourself and about others.</p>
   </div>
 </section>
 
@@ -25,9 +23,7 @@ banner: /images/homepage/bg-photography.jpg
     <p>As a local friend, even if you are not currently traveling, you might still be looking for connection and what better way to do that, than by teaching someone something only YOU know best?</p>
     <section class="center">
       <div>
-        <h2>
-          Sign up now        </h2>
-        <a class="button" href="/signup.html"> LET'S GO </a>
+        <a class="black-button" href="/signup.html"> SIGN UP NOW </a>
       </div>
     </section>
   </div>
