--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Learn with locals while you travel
+title: Learn With Locals While You Travel
 subtitle: Upskill and connect with likeminded people
 sign-up: <a class="button" href="/signup.html"> SIGN UP </a>
 banner: /images/homepage/bg-photography.jpg
