--- a/signup.html
+++ b/signup.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Join the crew
-subtitle: Sign up below
+title: Join our community
+subtitle: Sign up to teach or learn with locals
 banner: /images/homepage/bg-photography.jpg
 ---
 
@@ -9,7 +9,7 @@ banner: /images/homepage/bg-photography.jpg
 <section class="sign-up-section">
   <div>
     <h2>
-      Want to offer your skills and learn something new?
+      Offer your skills and get 20% OFF any future experience.
     </h2>
     <p> We're currently building our community and looking for people like you.</p>
     <p>Let us know what you'd like to learn or teach!</p>
@@ -18,19 +18,22 @@ banner: /images/homepage/bg-photography.jpg
 </section>
 
 <section class="sign-up-form center">
-  <p>SIGN UP NOW!</p>
-  <p>Get 20% OFF any future Learning Experience plus early beta access.</p>
+  <p>SIGN UP NOW</p>
+  <p>For beta access and get 20% OFF any future Learning Experience.</p>
   <form method="POST" action="http://formspree.io/urisager@gmail.com">
   <input type="text" name="name" placeholder="Name">
   <input type="email" name="email" placeholder="Email">
   <input type="text" id="location" name="location" placeholder="Where are you located?">
-  <textarea name="what-will-you-teach" placeholder="What would you like to teach or learn?" rows="5"></textarea>
+  <textarea name="Skill-interest" placeholder="Which skill are you interested in learning/teaching?" rows="5"></textarea>
   <textarea name="about-you" placeholder="Tell us a little about you" rows="5"></textarea>
   <textarea name="where-did-you-hear-about-us" placeholder="Where did you hear about us?" rows="5"></textarea>
   <input type="hidden" name="_next" value="/index.html"/>
   <button type="submit" class="button">Send</button>
   <input type="hidden" name="_next" value="../sign-up-thanks.html">
 </form>
+
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+ <div class="addthis_inline_share_toolbox"></div>
 
 <!-- Google Maps -->
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9m-SiYb-AXaiPQzQ6hgcbJ12j30t69Ug&libraries=places"></script>
