--- a/_upskills/learn-photography-bali.html
+++ b/_upskills/learn-photography-bali.html
@@ -5,7 +5,7 @@ title: Photography
 subtitle: Learn photography in Bali
 skill-name: photography-class-bali
 location: 'Bali, Indonesia'
-snippet: Learn photography in Bali and get insider knowledge of the most iconic locations.
+snippet: Learn photography in Bali and get insider knowledge of the most picturesque locations.
 skill-name: photography-class-bali
 where: Bali, Indonesia
 what: I will teach you how to take awesome photos in some of the most iconic locations in Bali.
@@ -13,10 +13,10 @@ good-to-know: Make sure you have space on your memory card.
 where: Canggu, Bali
 price: $100 USD
 duration: 1 day
-host-name: Ulla
-host-bio: Ulla is a self-taught photographer based in Bali.
-about: Always curious and with a camera, that's how Ulla describes herself, she is a digital nomad, web developer and curious traveler based in Bali.
-host-photo: /images/hosts/ulla.jpg
+host-name: Amaranta
+host-bio: Amaranta is a self-taught photographer based in Bali.
+about: Always curious and with a camera, that's how Amaranta describes herself, she is a digital nomad, yoga teacher and curious traveler based in Bali.
+host-photo: /images/hosts/amaranta.jpg
 feature-image_path: /uploads/category-skills-1.jpg
 map:
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d805184.7034087802!2d144.49132004031563!3d-37.97123049194095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad646b5d2ba4df7%3A0x4045675218ccd90!2sMelbourne+VIC%2C+Australia!5e0!3m2!1sen!2skr!4v1493780726658" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -29,6 +29,7 @@ featured-images:
   - path: /images/upskills/web-development-bali/learn-how-to-code_8.jpg
 level: Beginner
 categories: ['tech']
+button: true
 ---
 <!-- LightWidget WIDGET -->
 <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/9e6f16f612f7523d84c8cccb6db48ba7.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
