--- a/about.html
+++ b/about.html
@@ -4,22 +4,33 @@ title: About
 subtitle: Learn with locals
 banner: /images/homepage/bg-photography.jpg
 ---
----
-<section class="about-section" class="center">
-  <div>
-    <h2>
-      Who are we?
-    </h2>
-  </div>
-</section>
+
 <!--Our story section  -->
 <section class="about-section" class="center">
   <div>
-    <h5>Teach, learn and connect with likeminded people when traveling</h5>
-    <p>Learn with Locals was started from the idea that traveling isn't just about going places, it is essentially about people and broadening your horizon. We call it learning, not only learning new skills, but also learning about yourself and about others.</p>
-    <p>Our aim is to inspire personal empowerment, growth and connection.</p>
+    <h3>Our aim is to inspire you to learn and empower yourself and others</h3>
+    <h4>To cutlivate learning, Growth & Connection</h4>
   </div>
 </section>
-<section>
+
+<section class="about-section" class="center">
+  <div>
+    <h5>Founded by</h5>
+    <h4>Ulla Risager</h4>
+    <img class="about-photo" src="/images/hosts/ulla.jpg">
+  </div>
+  <div>
+    <p>Learn with Locals started from the idea that traveling isn't just about going places, it is essentially about people and broadening your horizon. We call it learning, not only learning new skills, but also learning about yourself and about others.</p>
+  </div>
+</section>
+<section class="sign-up-section">
+  <div>
+    <h3>Sign up now and receive 20% off your first Learning Experience!</h3>
+    <a class="black-button" href="/signup.html"> SIGN UP </a>
+  </div>
+</section>
+<section class="about-section" class="center">
+  <div>
   <img src="/uploads/life-coaching-bali.jpg">
+  </div>
 </section>
