--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Learn With Locals While You Travel
+title: Learn With Locals
 subtitle: Upskill and connect with likeminded people
 sign-up: <a class="button" href="/signup.html"> SIGN UP </a>
 banner: /images/homepage/bg-photography.jpg
@@ -10,7 +10,7 @@ button: true
 <section class="about-banner-section center">
   <div>
     <h5>Imagine going somewhere exotic like Bali - instead of just doing the typical tourist stuff, you might be able to pick up a new skill or upskill an existing one?</h5>
-    <p>Learn with Locals allows you to experience iconic locations and and connect with likeminded people all while learning something new!</p>
+    <p>Learn with Locals allows you to learn something new from local experts. Learn, teach and connect with likeminded people.</p>
   </div>
 </section>
 
