--- a/signup.html
+++ b/signup.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Join our community
-subtitle: Sign up to teach or learn with locals
+subtitle: Sign up to teach or learn 
 banner: /images/homepage/bg-photography.jpg
 ---
 
