--- a/_upskills/learn-web-development.html
+++ b/_upskills/learn-web-development.html
@@ -1,23 +1,23 @@
 ---
 layout: upskill
-banner: /uploads/digital-marketing-bali.jpg
-title: Digital Marketing
-subtitle: Learn digital marketing in Bali
-skill-name: digital-marketing-bali
-location: 'Melbourne, Australia'
-snippet: Learn Digital Marketing in Bali
-skill-name: digital-marketing-bali
+banner: /uploads/web-development-bali.jpg
+title: Web Development
+subtitle: Learn how to code in Bali
+skill-name: web-development-bali
+location: 'Bali, Indonesia'
+snippet: Learn how to code in Bali and connect with likeminded people.
+skill-name: Learn web development
 where: Bali, Indonesia
-what: I will teach you how to take awesome photos in some of the most iconic locations in Bali.
+what: I will teach you the basics of how to set up a website and how to write basic html and css to create a simple and beautiful website. This course is enough to get you started on your own if you wish to learn more about coding and web development.
 good-to-know: Make sure you have space on your memory card.
 where: Canggu, Bali
-price: $200 USD
-duration: 2 days
-host-name: Sam
-host-bio: Ulla is a self-taught photographer based in Bali.
+price: $350 USD
+duration: 3 days
+host-name: Tina
+host-bio: Tina is a self-taught web developer based in Bali.
 about: Always curious and with a camera, that's how Ulla describes herself, she is a digital nomad, web developer and curious traveler based in Bali.
 host-photo: /images/hosts/ulla.jpg
-feature-image_path: /uploads/digital-marketing-bali.jpg
+feature-image_path: /uploads/web-development-bali.jpg
 featured-images:
   - path: /images/upskills/web-development-bali/learn-how-to-code_3.jpg
   - path: /images/upskills/web-development-bali/learn-how-to-code_4.jpg
@@ -28,13 +28,14 @@ featured-images:
 level: Beginner
 categories: ['tech']
 button: true
+
 ---
 <!-- LightWidget WIDGET -->
 <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/9e6f16f612f7523d84c8cccb6db48ba7.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
 <section class="sign-up-section">
   <div>
     <h3>
-      Sign up now and receive 20% off your first Learning Experience!</h3>
+      Sign up now and receive 20% off your first Experience!</h3>
     <a class="button" href="/signup.html"> SIGN UP </a>
   </div>
 </section>
