--- a/_upskills/learn-photography-lightroom.html
+++ b/_upskills/learn-photography-lightroom.html
@@ -1,22 +1,22 @@
 ---
 layout: upskill
 banner: /uploads/category-skills-1.jpg
-title: Photography
-subtitle: Learn photography in Bali
+title: Photography & Lightroom editing
+subtitle: Step up your Instagram game and learn how to take aamazing photos in the most picturesque location in and around Bali.
 skill-name: photography-class-bali
 location: 'Bali, Indonesia'
 snippet: Learn photography in Bali and get insider knowledge of the most picturesque locations.
 skill-name: photography-class-bali
 where: Bali, Indonesia
-what: I will teach you how to take awesome photos in some of the most iconic locations in Bali.
-good-to-know: Make sure you have space on your memory card.
+what: I will teach you how to take awesome photos in some of the most iconic locations in Bali. On day 1, we will meet and drive around Bali, depending on weather and preference and on day 2 we will meet up and edit the pictures together in Lightroom.
+good-to-know: Make sure you have space on your camera memory card as well as your laoptop harddrive to save photos. It's a good idea to bring an external harddrive or USB, but not required.
 where: Canggu, Bali
-price: $100 USD
+price: $200 USD
 duration: 1 day
-host-name: Amaranta
-host-bio: Amaranta is a self-taught photographer based in Bali.
-about: Always curious and with a camera, that's how Amaranta describes herself, she is a digital nomad, yoga teacher and curious traveler based in Bali.
-host-photo: /images/hosts/amaranta.jpg
+host-name: Emilio
+host-bio: Emilio is a self-taught photographer, digital nomad and Co-founder of Institute Of Code. He is based in Bali where he splits his time between running various tech bootcamps and working as a photographer for eyes of a nomad.
+about: Always curious and with a camera, that's how Emilio describes himself, he is a digital nomad and curious traveler based in Bali.
+host-photo: /images/hosts/emilio.jpg
 feature-image_path: /uploads/category-skills-1.jpg
 map:
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d805184.7034087802!2d144.49132004031563!3d-37.97123049194095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad646b5d2ba4df7%3A0x4045675218ccd90!2sMelbourne+VIC%2C+Australia!5e0!3m2!1sen!2skr!4v1493780726658" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
