--- a/_upskills/learn-photography-lightroom.html
+++ b/_upskills/learn-photography-lightroom.html
@@ -5,13 +5,13 @@ title: Photography & Lightroom editing
 subtitle: Step up your Instagram game and learn how to take aamazing photos in the most picturesque location in and around Bali.
 skill-name: photography-class-bali
 location: 'Bali, Indonesia'
-snippet: Learn photography in Bali and get insider knowledge of the most picturesque locations.
+snippet: Learn photography in Bali and get insider knowledge of the most Instagrammable locations.
 skill-name: photography-class-bali
 where: Bali, Indonesia
 what: I will teach you how to take awesome photos in some of the most iconic locations in Bali. On day 1, we will meet and drive around Bali, depending on weather and preference and on day 2 we will meet up and edit the pictures together in Lightroom.
 good-to-know: Make sure you have space on your camera memory card as well as your laoptop harddrive to save photos. It's a good idea to bring an external harddrive or USB, but not required.
 where: Canggu, Bali
-price: $200 USD
+price: $150 USD
 duration: 1 day
 host-name: Emilio
 host-bio: Emilio is a self-taught photographer, digital nomad and Co-founder of Institute Of Code. He is based in Bali where he splits his time between running various tech bootcamps and working as a photographer for eyes of a nomad.
