--- a/_upskills/learn-web-development.html
+++ b/_upskills/learn-web-development.html
@@ -1,23 +1,24 @@
 ---
 layout: upskill
 banner: /uploads/web-development-bali.jpg
-title: Web Development
+title: Web development
 subtitle: Learn how to code in Bali
 skill-name: web-development-bali
 location: 'Bali, Indonesia'
-snippet: Learn how to code in Bali and connect with likeminded people.
-skill-name: Learn web development
+snippet: Learn how to code and and create your own website, blog or online shop while exploring Bali.
+skill-name: Web development
 where: Bali, Indonesia
 what: I will teach you the basics of how to set up a website and how to write basic html and css to create a simple and beautiful website. This course is enough to get you started on your own if you wish to learn more about coding and web development.
-good-to-know: Make sure you have space on your memory card.
+good-to-know: It's always good to have an idea of what you want to create in terms of design and colors, hand-sketches are a great way to get started so we have an idea of what you want to create.
 where: Canggu, Bali
-price: $250 USD
-duration: 2 days
+price: $350 USD
+duration: 3 days
 host-name: Tina
-host-bio: Tina is a self-taught web developer based in Bali.
-about: Always curious and with a camera, that's how Ulla describes herself, she is a digital nomad, web developer and curious traveler based in Bali.
-host-photo: /images/hosts/ulla.jpg
+host-bio: Tina is a self-taught web developer, entrepreneur and Co-founder of The Institute Of Code based in Bali.
+about: Connect with Tina and @instituteofcode on instagram below.
 feature-image_path: /uploads/web-development-bali.jpg
+map:
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31556.367972190572!2d115.12255341022943!3d-8.639507402657461!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23861f4589665%3A0x5030bfbca82fd30!2sCanggu%2C+North+Kuta%2C+Badung+Regency%2C+Bali%2C+Indonesia!5e0!3m2!1sen!2skr!4v1494159074201" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 featured-images:
   - path: /images/upskills/web-development-bali/learn-how-to-code_3.jpg
   - path: /images/upskills/web-development-bali/learn-how-to-code_4.jpg
@@ -31,11 +32,11 @@ button: true
 
 ---
 <!-- LightWidget WIDGET -->
-<script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/9e6f16f612f7523d84c8cccb6db48ba7.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+<!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/f479dd0967ea58b1ad986ae688aaf8c0.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
 <section class="sign-up-section">
   <div>
     <h3>
       Sign up now and receive 20% off your first Experience!</h3>
-    <a class="button" href="/signup.html"> SIGN UP </a>
+    <a class="black-button" href="/signup.html"> SIGN UP </a>
   </div>
 </section>
