--- a/_upskills/blogging-content-creation.html
+++ b/_upskills/blogging-content-creation.html
@@ -1,11 +1,11 @@
 ---
 layout: upskill
 banner: /uploads/digital-marketing-bali.jpg
-title: Blogging & Content Creation
+title: Writing blogposts
 subtitle: Learn blogging and content creation in Bali
 skill-name: blogging-bali
-location: 'Ubud, Bali'
-snippet: Learn how to write blogposts and create unique content from a local journalist in Bali
+location: 'Bali, Indonesia'
+snippet: Learn how to structure and write relevant blogposts and create unique content from a digital nomad journalist in Bali
 skill-name: Learn how to write blogposts in Bali
 where: Bali, Indonesia
 what: I will teach you how to structure your writing, how to pick relevant topics and how to keep it structured and unique. Whether you're starting a blog or writing marketing content, I can help you dive into the writing journey and become a better writer.
