--- a/index.html
+++ b/index.html
@@ -36,16 +36,15 @@ button: true
 
 <!-- TESTIMONIAL-SECTION -->
 <section class="grid">
-  <div class="col-4 center">
+  <div class="col-4_md-6_xs-12 center">
       <img src="/images/general/cindy.jpg" alt="cindy.jpg" class="testimonial-image">
       <h3>Cindy</h3>
       <h5>Content Strategist</h5>
     </div>
     <div class="col-1 quote right">"</div>
     <div class="col-6-middle testimonial-section center">
-      I always wanted to learn coding, so I signed up for a 3 day learning experience with Tina. It's been challenging, but I've learned how to code my own website and my problem solving skills have improved too. Can only recommend this skill to anyone wanting to empower themselves and connect with cool people.
-    </div>
-    <div class="col-1-bottom quote left">"</div>
+      I always wanted to learn coding, so I signed up for a 3 day learning experience with Tina. It was challenging, but I've learned the basics of how to code my own website. Can only recommend this skill to anyone wanting upskill or learn something new.
+    <div class="col-1-bottom quote right">"</div>
   </div>
 </section>
 
