--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ button: true
 <!--ABOUT BANNER SECTION  -->
 <section class="about-banner-section center">
   <div>
-    <h5>Imagine going somewhere exotic like Bali - instead of just doing the typical tourist stuff, you might be able to pick up a new skill or upskill an existing one?</h5>
-    <h5>Learn with Locals allows you to learn from local experts. Learn, teach and connect with likeminded people.</h5>
+    <h5>Imagine going to Bali and instead of just doing the typical tourist stuff, you might be able to pick up a new skill and connect with likeminded locals.</h5>
+    <h5>Learn with Locals allows you to learn from local experts while you're traveling.</h5>
   </div>
 </section>
 
