--- a/_upskills/blogging-content-creation.html
+++ b/_upskills/blogging-content-creation.html
@@ -30,7 +30,7 @@ button: true
 <section class="sign-up-section">
   <div>
     <h3>
-      Sign up now and receive 20% off your first Learning Experience!</h3>
+      Sign up now and receive 20% off your first Skill!</h3>
     <a class="black-button" href="/signup.html"> SIGN UP </a>
   </div>
 </section>
