--- a/_upskills/learn-web-development.html
+++ b/_upskills/learn-web-development.html
@@ -5,7 +5,7 @@ title: Web development
 subtitle: Learn how to code in Bali
 skill-name: web-development-bali
 location: 'Bali, Indonesia'
-snippet: Learn how to code and and create your own website, blog or online shop while exploring Bali.
+snippet: Learn how to code and and create your own website, blog or online shop while exploring Bali with locals.
 skill-name: Web development
 where: Bali, Indonesia
 what: I will teach you the basics of how to set up a website and how to write basic html and css to create a simple and beautiful website. This course is enough to get you started on your own if you wish to learn more about coding and web development.
@@ -13,9 +13,10 @@ good-to-know: It's always good to have an idea of what you want to create in ter
 where: Canggu, Bali
 price: $350 USD
 duration: 3 days
+host-photo: /images/hosts/tina.jpg
 host-name: Tina
 host-bio: Tina is a self-taught web developer, entrepreneur and Co-founder of The Institute Of Code based in Bali.
-about: Connect with Tina and @instituteofcode on instagram below.
+about: Follow Tina and @instituteofcode on instagram.
 feature-image_path: /uploads/web-development-bali.jpg
 map:
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31556.367972190572!2d115.12255341022943!3d-8.639507402657461!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23861f4589665%3A0x5030bfbca82fd30!2sCanggu%2C+North+Kuta%2C+Badung+Regency%2C+Bali%2C+Indonesia!5e0!3m2!1sen!2skr!4v1494159074201" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -36,7 +37,7 @@ button: true
 <section class="sign-up-section">
   <div>
     <h3>
-      Sign up now and receive 20% off your first Experience!</h3>
+      Sign up now and receive 20% off your first E!</h3>
     <a class="black-button" href="/signup.html"> SIGN UP </a>
   </div>
 </section>
