--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Learn With Locals while you travel
 subtitle: Upskill and connect with likeminded people
-sign-up: <a class="button" href="/signup.html"> SIGN UP </a>
+sign-up: <a class="button" href="/signup.html"> JOIN </a>
 banner: /images/homepage/bg-photography.jpg
 button: true
 ---
@@ -43,7 +43,7 @@ button: true
     </div>
     <div class="col-1 quote right">"</div>
     <div class="col-6-middle testimonial-section center">
-      I always wanted to learn coding, so I signed up for a 3 day learning experience with Tina. It was challenging, but I've learned the basics of how to code my own website. Can only recommend this skill to anyone wanting upskill or learn something new.
+      I went on a 3 week holiday to Bali and wanted to learn something new and challenge myself, so I signed up for a 3 day coding skill with Tina. Can only recommend this experience to anyone wanting upskill and learn how to code - in paradise! :)
     <div class="col-1-bottom quote right">"</div>
   </div>
 </section>
@@ -75,7 +75,7 @@ button: true
     <h2>
       Want to offer your skills and learn something new?
     </h2>
-    <h5>Sign up now to offer your skills and recieve 20% off any Learning Experience!</h5>
+    <h5>Join our community and recieve 20% off any skill!</h5>
     <a class="black-button" href="/signup.html"> SIGN UP </a>
   </div>
 </section>
