--- a/_upskills/learn-photography-lightroom.html
+++ b/_upskills/learn-photography-lightroom.html
@@ -3,14 +3,14 @@ layout: upskill
 banner: /uploads/category-skills-1.jpg
 title: Photography & Lightroom
 subtitle: Learn how to take amazing photos in Bali
-skill-name: photography-class-bali
+skill-name: Photography & Lightroom
 location: 'Bali, Indonesia'
 snippet: Step up your game and learn photography and lightroom editing, while exploring some of the most iconic locations in Bali
-skill-name: photography-class-bali
+skill-name: Photography & Lightroom Editing
 where: Bali, Indonesia
-what: I will teach you how to take awesome photos in some of the most iconic locations in Bali. On day 1, we will meet and drive around Bali, depending on weather and preference and on day 2 we will meet up and edit the pictures together in Lightroom.
-good-to-know: Make sure you have space on your camera memory card as well as your laoptop harddrive to save photos. It's a good idea to bring an external harddrive or USB, but not required.
-where: Canggu, Bali
+what: I will teach you how to take awesome photos in some of the most iconic locations in Bali. We will meet early in the morning to shoot the sunrise and then depending on weather and preferences, we will continue to other scenic locations around Canggu. After lunch we will export and edit your pictures together in Lightroom.
+good-to-know: Make sure you have space on your camera's memory card as well as your harddrive on your laptop. We will shoot in RAW which takes up quite a lot of space. It might be a good idea to bring an external harddrive or USB, but not required.
+where: Rice fields, temples, beaches and viewpoints around Canggu, Bali
 price: $150 USD
 duration: 1 day
 host-name: Emilio
@@ -19,14 +19,8 @@ about: Follow his adventures on instagram @eyes_of_a_nomad
 host-photo: /images/hosts/emilio.png
 feature-image_path: /uploads/category-skills-1.jpg
 map:
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d805184.7034087802!2d144.49132004031563!3d-37.97123049194095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad646b5d2ba4df7%3A0x4045675218ccd90!2sMelbourne+VIC%2C+Australia!5e0!3m2!1sen!2skr!4v1493780726658" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31556.367972190572!2d115.12255341022943!3d-8.639507402657461!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23861f4589665%3A0x5030bfbca82fd30!2sCanggu%2C+North+Kuta%2C+Badung+Regency%2C+Bali%2C+Indonesia!5e0!3m2!1sen!2skr!4v1494159074201" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 featured-images:
-  - path: /images/upskills/web-development-bali/learn-how-to-code_3.jpg
-  - path: /images/upskills/web-development-bali/learn-how-to-code_4.jpg
-  - path: /images/upskills/web-development-bali/learn-how-to-code_5.jpg
-  - path: /images/upskills/web-development-bali/learn-how-to-code_6.jpg
-  - path: /images/upskills/web-development-bali/learn-how-to-code_7.jpg
-  - path: /images/upskills/web-development-bali/learn-how-to-code_8.jpg
 level: Beginner
 categories: ['tech']
 button: true
@@ -36,7 +30,7 @@ button: true
 <section class="sign-up-section">
   <div>
     <h3>
-      Sign up now and receive 20% off your first Experience!</h3>
+      Sign up now and receive 20% off your first skill!</h3>
     <a class="black-button" href="/signup.html"> SIGN UP </a>
   </div>
 </section>
