--- a/_upskills/blogging-content-creation.html
+++ b/_upskills/blogging-content-creation.html
@@ -1,7 +1,7 @@
 ---
 layout: upskill
 banner: /uploads/digital-marketing-bali.jpg
-title: Writing blogposts
+title: Blogging
 subtitle: Learn blogging and content creation in Bali
 skill-name: blogging-bali
 location: 'Bali, Indonesia'
