--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ button: true
 <section class="about-banner-section center">
   <div>
     <h5>Imagine going to Bali and instead of just doing the typical tourist stuff, you might be able to pick up a new skill and connect with likeminded locals.</h5>
-    <h5>Learn with Locals allows you to learn from local experts while you're traveling.</h5>
+    <h5>Learn with Locals allows you to learn new skills from local experts while you're traveling.</h5>
   </div>
 </section>
 
