--- a/our-story.html
+++ b/our-story.html
@@ -1,21 +1,23 @@
 ---
 layout: default
-title: How it works
+title: Our story
 subtitle: Learn with locals
 banner: /images/homepage/bg-photography.jpg
 ---
 
-<section class="center">
+
+<section class="about-section" class="center">
   <div>
-    <h4>Teach, learn and connect with likeminded people when traveling</h4>
+    <h5>Founded by</h5>
+    <h4>Ulla Risager</h4>
+    <img class="about-photo" src="/images/hosts/ulla.jpg">
+  </div>
+  <div>
+    <p>Learn with Locals started from the idea that traveling isn't just about going places, it is essentially about people and broadening your horizon. We call it learning, not only learning new skills, but also learning about yourself and about others.</p>
   </div>
 </section>
 <!--Our story section  -->
-<section class="our-story-section" class="center">
-  <div>
-    <p>We help you find likeminded people when traveling so you can - not only learn about yourself and a destination - but also learn a new skill, meet people and have fun.</p>
-  </div>
-</section>
+
 
 <section class="our-story-section" >
   <div>
