--- a/_upskills/blogging-content-creation.html
+++ b/_upskills/blogging-content-creation.html
@@ -1,15 +1,15 @@
 ---
 layout: upskill
 banner: /uploads/digital-marketing-bali.jpg
-title: Blogging
-subtitle: Learn blogging and content creation in Bali
+title: Writing & Content Creation
+subtitle: Learn how to write and crete unique content in Bali
 skill-name: blogging-bali
 location: 'Bali, Indonesia'
-snippet: Learn how to structure and write relevant blogposts and create unique content from a digital nomad journalist in Bali
-skill-name: Learn how to write blogposts in Bali
+snippet: Learn how to write and create unique content in Bali from a professional journalist.
+skill-name: Learn how to write and create content in Bali
 where: Bali, Indonesia
 what: I will teach you how to structure your writing, how to pick relevant topics and how to keep it structured and unique. Whether you're starting a blog or writing marketing content, I can help you dive into the writing journey and become a better writer.
-good-to-know: This is a 1 day course and after this course you will have lerned the basics of writing, how to structure content, topics, create headlines and how to turn it into creative content.
+good-to-know: This is a 1 day course and after this course you will have lerned the basics of writing, how to structure content, topics, create compelling headlines and how to turn it into unique content.
 where: Ubud, Bali
 price: $100 USD
 duration: 1 day
