--- a/_upskills/learn-photography-lightroom.html
+++ b/_upskills/learn-photography-lightroom.html
@@ -11,8 +11,8 @@ where: Bali, Indonesia
 what: I will teach you how to take awesome photos in some of the most iconic locations in Bali. We will meet early in the morning to shoot the sunrise and then depending on weather and preferences, we will continue to other scenic locations around Canggu. After lunch we will export and edit your pictures together in Lightroom.
 good-to-know: Make sure you have space on your camera's memory card as well as your harddrive on your laptop. We will shoot in RAW which takes up quite a lot of space. It might be a good idea to bring an external harddrive or USB, but not required.
 where: Rice fields, temples, beaches and viewpoints around Canggu, Bali
-price: $150 USD
-duration: 1 day
+price: $250 USD
+duration: 2 days
 host-name: Emilio
 host-bio: Emilio is an entrepreneur, traveller and self-taught photographer with a love for adventure.
 about: Follow his adventures on instagram @eyes_of_a_nomad
