--- a/_upskills/learn-photography-lightroom.html
+++ b/_upskills/learn-photography-lightroom.html
@@ -5,7 +5,7 @@ title: Photography & Lightroom
 subtitle: Learn how to take amazing photos in Bali
 skill-name: Photography & Lightroom
 location: 'Bali, Indonesia'
-snippet: Step up your game and learn photography and lightroom editing, while exploring some of the most iconic locations in Bali
+snippet: Step up your game and learn photography and lightroom editing, while exploring some of the most iconic locations in Bali.
 skill-name: Photography & Lightroom Editing
 where: Bali, Indonesia
 what: I will teach you how to take awesome photos in some of the most iconic locations in Bali. We will meet early in the morning to shoot the sunrise and then depending on weather and preferences, we will continue to other scenic locations around Canggu. After lunch we will export and edit your pictures together in Lightroom.
@@ -14,6 +14,8 @@ where: Rice fields, temples, beaches and viewpoints around Canggu, Bali
 price: $250 USD
 duration: 2 days
 host-name: Emilio
+host-signature:
+  <img src="/uploads/emilio-signature.png"
 host-bio: Emilio is an entrepreneur, traveller and self-taught photographer with a love for adventure.
 about: Follow his adventures on instagram @eyes_of_a_nomad
 host-photo: /images/hosts/emilio.png
@@ -30,7 +32,7 @@ button: true
 <section class="sign-up-section">
   <div>
     <h3>
-      Sign up now and receive 20% off your first skill!</h3>
+      Sign up now and receive 20% off this learning experience!</h3>
     <a class="black-button" href="/signup.html"> SIGN UP </a>
   </div>
 </section>
