--- a/_upskills/learn-web-development.html
+++ b/_upskills/learn-web-development.html
@@ -15,6 +15,8 @@ price: $350 USD
 duration: 3 days
 host-photo: /images/hosts/tina.jpg
 host-name: Tina
+host-signature:
+  <img src="/uploads/tina-signature.png"
 host-bio: Tina is a self-taught web developer, entrepreneur and Co-founder of The Institute Of Code based in Bali.
 about: Follow Tina and @instituteofcode on instagram.
 feature-image_path: /uploads/web-development-bali.jpg
@@ -37,7 +39,7 @@ button: true
 <section class="sign-up-section">
   <div>
     <h3>
-      Sign up now and receive 20% off your first E!</h3>
+      Sign up now and receive 20% off this learning experience!</h3>
     <a class="black-button" href="/signup.html"> SIGN UP </a>
   </div>
 </section>
