--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@ button: true
 <!-- CATEGORY SECTION -->
 
 
-<!---
 
-<section>
-<h2>What do you want to learn?</h2>
+
+<!--<h2>What do you want to learn?</h2>
 <div class="grid-middle">
 {% for cat in site.categories %}
     <a class="col-3_md-6_xs-12" href="/skills">
@@ -67,18 +66,31 @@ button: true
   {% endfor %}
 </div>
 </section>
---->
+ -->
 
 <!-- SIGN UP SECTION -->
+
 <section class="sign-up-section">
   <div>
     <h2>
       Want to offer your skills and learn something new?
     </h2>
-    <h5>Join our community and recieve 20% off any skill!</h5>
+    <h5> We're currently building our community and looking for people like you!</h5>
+  </div>
+  <div>
+    <a class="black-button" target="_blank" href="https://instituteofcode.typeform.com/to/jy54Ug" rel="nofollow"> SIGN UP</a>
+</div>
+<h5>Join our community and get 20% OFF any Learning Experience.</h5>
+</section>
+
+<!-- <div>
+    <h2>
+      Want to offer your skills and learn something new?
+    </h2>
+    <h5>Join our community and recieve 20% off any learning experience!</h5>
     <a class="black-button" href="/signup.html"> SIGN UP </a>
   </div>
-</section>
+</section> -->
 
 <!-- BLOG SECTION -->
 <section class="blog-section center">
