--- a/signup.html
+++ b/signup.html
@@ -1,26 +1,27 @@
 ---
 layout: default
 title: Join our community
-subtitle: Sign up to teach or learn
+subtitle: Sign up and get 20% OFF any learning experience
 banner: /images/homepage/bg-photography.jpg
 ---
 
 <!-- SIGN UP SECTION -->
+<section class="about-section" class="center">
+<div>
+<h5> Learn with locals allows you to find local learning experiences while traveling. Why not become a better photographer of brush up on your writing skills while exploring a destination through locals?</h5>
+</div>
+</section>
+
 <section class="sign-up-section">
   <div>
-    <h2>
-      Offer your skills and get 20% OFF any future experience
-    </h2>
-    <h5> We're currently building our community and looking for people like you</h5>
-    <h5>Let us know what you'd like to learn or teach</h5>
-
+    <h4> We're currently building our community and looking for people like you!</h4>
   </div>
+  <div>
+    <a class="black-button" target="_blank" href="https://instituteofcode.typeform.com/to/jy54Ug" rel="nofollow"> TEACH A SKILL</a>
+</div>
+<h5>For beta access and get 20% OFF any future Learning Experience.</h5>
 </section>
 
-<section class="sign-up-form center">
-<a class="black-button" target="_blank" href="https://instituteofcode.typeform.com/to/jy54Ug" rel="nofollow"> SIGN UP</a>
-<h5>For beta access and get 20% OFF any Learning Experience.</h5>
-</section>
 
   <!-- <form method="POST" action="http://formspree.io/urisager@gmail.com">
   <input type="text" name="name" placeholder="Name">
