--- a/_upskills/blogging-content-creation.html
+++ b/_upskills/blogging-content-creation.html
@@ -6,7 +6,7 @@ subtitle: Learn how to write and crete unique content in Bali
 skill-name: blogging-bali
 location: 'Bali, Indonesia'
 snippet: Learn how to write and create unique content in Bali from a professional journalist.
-skill-name: Learn how to write and create content in Bali
+skill-name: Writing & Content Creation in Bali
 where: Bali, Indonesia
 what: I will teach you how to structure your writing, how to pick relevant topics and how to keep it structured and unique. Whether you're starting a blog or writing marketing content, I can help you dive into the writing journey and become a better writer.
 good-to-know: This is a 1 day course and after this course you will have lerned the basics of writing, how to structure content, topics, create compelling headlines and how to turn it into unique content.
@@ -14,6 +14,8 @@ where: Ubud, Bali
 price: $100 USD
 duration: 1 day
 host-name: Ali
+host-signature:
+  <img src="/uploads/ali-signature.png"
 host-bio: Ali is a journalist, Traveller and Holistic Health coach based in Bali. She is also the Founder of @Girlspo+ empowering girls around the world.
 about: Connect with her on instagram @ali_girlspo.
 host-photo: /images/hosts/ali.jpg
@@ -23,14 +25,13 @@ map:
 featured-images:
 level: Beginner
 categories: ['tech']
-button: true
 ---
 <!-- LightWidget WIDGET -->
 <a href="https://www.instagram.com/cphexplorer/" target="_blank"><img src="/uploads/ali-instagram.jpg" alt="ali-girlspo.jpg"></a>
 <section class="sign-up-section">
   <div>
-    <h3>
-      Sign up now and receive 20% off your first Skill!</h3>
+    <h4>
+      Sign up now and receive 20% off this Learning Experience!</h4>
     <a class="black-button" href="/signup.html"> SIGN UP </a>
   </div>
 </section>
