--- a/signup.html
+++ b/signup.html
@@ -1,25 +1,26 @@
 ---
 layout: default
 title: Join our community
-subtitle: Sign up and get 20% OFF any learning experience
+subtitle: Sign up to share your passion
 banner: /images/homepage/bg-photography.jpg
 ---
 
 <!-- SIGN UP SECTION -->
 <section class="about-section" class="center">
 <div>
-<h5> Learn with locals allows you to find local learning experiences while traveling. Why not become a better photographer of brush up on your writing skills while exploring a destination through locals?</h5>
+<h5> Learn with locals allows you to challenge yourself and connect with likeminded individuals.</h5>
+  <h5>We belive that everybody has a passion and a set of skills they master and can teach others. Why not share your skills, make money and meet new people while doing so? You don't have to be a professional to teach - passion will do just fine.</h5>
 </div>
 </section>
 
 <section class="sign-up-section">
   <div>
-    <h4> We're currently building our community and looking for people like you!</h4>
+    <h4>Join our community</h4>
   </div>
   <div>
-    <a class="black-button" target="_blank" href="https://instituteofcode.typeform.com/to/jy54Ug" rel="nofollow"> TEACH A SKILL</a>
+    <a class="black-button" target="_blank" href="https://instituteofcode.typeform.com/to/jy54Ug" rel="nofollow"> SIGN UP</a>
 </div>
-<h5>For beta access and get 20% OFF any future Learning Experience.</h5>
+<h5>Get beta access and 20% OFF any future Learning Experience.</h5>
 </section>
 
 
